Create form component for step one and step two (Just for mobile for now, desktop design come after)

--- a/src/utilities/variables.scss
+++ b/src/utilities/variables.scss
@@ -6,6 +6,7 @@ $marine-blue: hsl(213, 96%, 18%);
 $purplish-blue: hsl(243, 100%, 62%);
 $pastel-blue: hsl(228, 100%, 84%);
 $light-blue: hsl(206, 94%, 87%);
+$light-blue-02: hsl(206, 94%, 87%, 0.2);
 $strawberry-red: hsl(354, 84%, 57%);
 
 // Neutral color
