--- a/src/App.scss
+++ b/src/App.scss
@@ -1,40 +1,115 @@
 @import "utilities/variables";
-p{
-  font-size: 16px;
-}
+
 
 .app{
   height: 100vh;
   background: $light-gray;
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
 
 .form-container{
-  width: 55%;
-  height: 568px;
-  background: #fff;
   border-radius: 10px;
   display: flex;
-  padding: 15px;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  height: 100%;
 }
 
-@media screen and (min-width: 768px){
+.left-col {
+  background: url("./assets/images/bg-sidebar-mobile.svg") no-repeat;
+  background-size: cover;
+  position: absolute;
+  width: 100%;
+  height: 172px;
+  left: 0;
+  top: 0;
+  z-index: 1;
+  .nav-step{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    height: 80%;
+    gap: 15px;
+    color: $light-blue;
+    font-family: Ubuntu, sans-serif;
+    font-weight: 700;
+    .btn-step{
+      border: 2px solid $light-blue;
+      padding: 5px 10px;
+      border-radius: 50%;
+      cursor: pointer;
+    }
+    .active.btn-step{
+      background: $light-blue;
+      color: $marine-blue;
+    }
+  }
+}
+.right-col{
+  z-index: 5;
+  margin-top: 100px;
+  width: 80%;
+  background: #fff;
+  padding: 25px 20px;
+  border-radius: 10px;
+  .information-text{
+    color: $cool-gray;
+  }
+}
+
+.container-btn-next{
+  background: #ffffff;
+  padding: 10px;
+  width: 100%;
+  display: flex;
+  margin-top: auto;
+  text-align: right;
+  button{
+    background: $marine-blue;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    margin-right: 20px;
+    margin-left: auto;
+  }
+}
+
+@media screen and (min-width: 980px){
   .form-container{
     width: 55%;
     height: 568px;
     background: #fff;
     border-radius: 10px;
     display: flex;
-    padding: 30px;
+    padding: 15px;
+    position: relative;
+    flex-direction: row;
   }
 
   .left-col {
+    display: flex;
+    position: relative;
     flex: 0 0 274px;
     background: url("./assets/images/bg-sidebar-desktop.svg") no-repeat;
+    height: 100%;
+    .nav-step{
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      width: 100%;
+    }
   }
   .right-col {
+    display: flex;
     flex: 1;
   }
+  .app{
+    height: 100vh;
+    background: $light-gray;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
 }
