--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,16 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url("https://fonts.googleapis.com/css2?family=Rubik:wght@400;700&family=Ubuntu:wght@400;500;700&display=swap");
+* {
+  font-family: Ubuntu, sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+p {
+  font-size: 16px;
 }
+
+h2 {
+  margin: 0;
+  font-family: Ubuntu, sans-serif;
+  color: hsl(213, 96%, 18%);
+}
+
+/*# sourceMappingURL=index.css.map */
