--- a/src/App.css
+++ b/src/App.css
@@ -57,6 +57,16 @@
   color: hsl(231, 11%, 63%);
 }
 
+.content-container {
+  width: 100%;
+  height: 100%;
+  z-index: 10;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 .container-btn-next {
   background: #ffffff;
   padding: 10px;
@@ -108,6 +118,12 @@
     display: flex;
     justify-content: center;
     align-items: center;
+  }
+  .content-container {
+    flex: 1;
+  }
+  .container-btn-next {
+    padding: 0;
   }
 }
 
