--- a/src/App.scss
+++ b/src/App.scss
@@ -58,6 +58,16 @@
   }
 }
 
+.content-container {
+  width: 100%;
+  height: 100%;
+  z-index: 10;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 .container-btn-next{
   background: #ffffff;
   padding: 10px;
@@ -110,6 +120,14 @@
     display: flex;
     justify-content: center;
     align-items: center;
+  }
+
+  .content-container{
+    flex: 1;
+  }
+
+  .container-btn-next{
+    padding: 0;
   }
 
 }
