--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Rubik:wght@400;700&family=Ubuntu:wght@400;500;700&display=swap");
+body {
+  padding: 0;
+  margin: 0;
+}
+
 * {
   font-family: Ubuntu, sans-serif;
 }
