--- a/src/App.scss
+++ b/src/App.scss
@@ -5,7 +5,9 @@
   height: 100vh;
   background: $light-gray;
 }
-
+.hide {
+  display: none;
+}
 .form-container{
   border-radius: 10px;
   display: flex;
@@ -70,7 +72,7 @@
 
 .container-btn-next{
   background: #ffffff;
-  padding: 10px;
+  padding: 10px 0;
   width: 100%;
   display: flex;
   margin-top: auto;
