--- a/src/components/steps/stepThree/StepThree.css
+++ b/src/components/steps/stepThree/StepThree.css
@@ -1,51 +1,84 @@
 @import url("https://fonts.googleapis.com/css2?family=Rubik:wght@400;700&family=Ubuntu:wght@400;500;700&display=swap");
-.step-two {
+.step-three {
   /* switch */
   /* the interesting bit */
   /* most of the stuff below is the same as the W3Schools stuff,
      but modified a bit to reflect changed HTML structure */
   /* styling to make it look like your screenshot */
 }
-.step-two label {
+.step-three label {
   width: 100%;
 }
-.step-two .card-input-element {
-  display: none;
+.step-three .price-contenair {
+  margin-left: auto;
+  font-size: 13px;
+  color: hsl(243, 100%, 62%);
 }
-.step-two .card-input {
+.step-three .card-input {
   padding: 15px;
   display: flex;
   gap: 20px;
   border: 1px solid hsl(231, 11%, 63%);
   border-radius: 10px;
   margin-bottom: 15px;
+  align-items: center;
 }
-.step-two .card-input .panel-icon {
+.step-three .card-input .panel-icon {
   flex-basis: 40px;
 }
-.step-two .card-input .container-text {
+.step-three .card-input .container-text {
   display: flex;
   flex-direction: column;
 }
-.step-two .card-input .panel-heading, .step-two .card-input .panel-body {
+.step-three .card-input .panel-heading, .step-three .card-input .panel-body {
   flex-basis: 100%;
 }
-.step-two .card-input:hover {
+.step-three .card-input .panel-body {
+  font-weight: 400;
+  font-size: 12px;
+  color: hsl(231, 11%, 63%);
+}
+.step-three .card-input-element {
+  background-color: transparent;
+  appearance: none;
+  margin: 0;
+  font: inherit;
+  color: currentColor;
+  width: 1.15em;
+  height: 1.15em;
+  border: 1px solid hsl(231, 11%, 63%);
+  transform: translateY(-0.075em);
+  display: grid;
+  place-content: center;
+}
+.step-three .card-input-element::before {
+  content: "";
+  width: 1.15em;
+  height: 1.15em;
+  transform: scale(0);
+  transition: 120ms transform ease-in-out;
+  background-color: hsl(243, 100%, 62%);
+}
+.step-three .card-input-element:checked::before {
+  color: white;
+  transform: scale(1);
+}
+.step-three .card-input:hover {
   cursor: pointer;
 }
-.step-two .card-input-element:checked + .card-input {
+.step-three .checked {
   border-color: hsl(243, 100%, 62%);
   background: hsla(206, 94%, 87%, 0.2);
 }
-.step-two .grey {
+.step-three .grey {
   color: hsl(231, 11%, 63%);
 }
-.step-two .yearly-offer {
+.step-three .yearly-offer {
   font-size: 12px;
   font-weight: 400;
   color: hsl(213, 96%, 18%);
 }
-.step-two .label {
+.step-three .label {
   pointer-events: none;
   display: flex;
   align-items: center;
@@ -54,22 +87,22 @@
   box-sizing: border-box;
   padding: 15px;
 }
-.step-two .switch,
-.step-two .input:not(:checked) + .label .left,
-.step-two .input:checked + .label .right {
+.step-three .switch,
+.step-three .input:not(:checked) + .label .left,
+.step-three .input:checked + .label .right {
   pointer-events: all;
   cursor: pointer;
 }
-.step-two .input {
+.step-three .input {
   display: none;
 }
-.step-two .switch {
+.step-three .switch {
   position: relative;
   display: inline-block;
   width: 40px;
   height: 20px;
 }
-.step-two .slider {
+.step-three .slider {
   position: absolute;
   cursor: pointer;
   top: 0;
@@ -80,7 +113,7 @@
   -webkit-transition: 0.4s;
   transition: 0.4s;
 }
-.step-two .slider:before {
+.step-three .slider:before {
   position: absolute;
   content: "";
   height: 12px;
@@ -91,21 +124,21 @@
   -webkit-transition: 0.4s;
   transition: 0.4s;
 }
-.step-two input:checked + .label .slider:before {
+.step-three input:checked + .label .slider:before {
   -webkit-transform: translateX(20px);
   -ms-transform: translateX(20px);
   transform: translateX(20px);
 }
-.step-two .slider.round {
+.step-three .slider.round {
   border-radius: 34px;
 }
-.step-two .slider.round:before {
+.step-three .slider.round:before {
   border-radius: 50%;
 }
-.step-two .left, .step-two .right {
+.step-three .left, .step-three .right {
   margin: 0 0.5em;
   font-weight: bold;
   font-family: sans-serif;
 }
 
-/*# sourceMappingURL=StepTwo.css.map */
+/*# sourceMappingURL=StepThree.css.map */
